--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <div class="homepage-container">
+        <div class="menu">
+            <div class="logo-img flex">
+                <img src="./Byway-logo.png" alt="logo">
+                <a href="#">Categories</a>
+            </div>
+            <div class="search-container flex">
+                <input type="text" placeholder="Search courses" class="text">
+                <button type="submit"><img src="./search-icon.png" alt="search" class="search"></button>
+            </div>
+            <div class="slogan flex">
+                <p>Teach on Byway</p>
+            </div>
+            <div class="sign-in-hidden flex">
+                <a href="#"><img src="./shoppingcart-icon.png" alt="shoppingcart"></a>
+                <button class="get-started-button">Login</button>
+                <button class="sign-in-button">Sign Up</button>
+            </div>
+        </div>
+        <div class="main-content">  
+            <div class="left-content">
+                <form action="#">
+                    <h1>Sign in to your account</h1>
+                    <label for="username">Username or Email</label><br>
+                    <input type="text" id="username" name="username" placeholder="Username or Email ID" class="full"><br>
+
+                    <label for="password">Password</label><br>
+                    <input type="password" id="password" name="password" placeholder="Enter Password" class="full"><br>
+
+                    <div class="checkbox-container">
+                        <input type="checkbox" id="remember-me" name="remember-me">
+                        <label for="remember-me">Remember me</label>
+                    </div>
+
+                    <button type="submit" class="login-button">Sign In</button>
+                    <p class="forgot-password"><a href="#">Forgot Password?</a></p>
+                    <div class="logo">
+                        <h1> hello </h1>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
