--- a/login/index.html
+++ b/login/index.html
@@ -27,6 +27,9 @@
             <div class="slogan flex">
                 <p>Teach on Byway</p>
             </div>
+            <div>
+                //nho xoa
+            </div>
             <div class="sign-in-hidden flex">
                 <a href="#"><img src="./shoppingcart-icon.png" alt="shoppingcart"></a>
                 <button class="get-started-button">Login</button>
