--- a/login/index.html
+++ b/login/index.html
@@ -17,28 +17,29 @@
     <div class="homepage-container">
         <div class="menu">
             <div class="logo-img flex">
-                <img src="./Byway-logo.png" alt="logo">
+                <img src="./img-login/Byway-logo.png" alt="logo">
                 <a href="#">Categories</a>
             </div>
             <div class="search-container flex">
                 <input type="text" placeholder="Search courses" class="text">
-                <button type="submit"><img src="./search-icon.png" alt="search" class="search"></button>
+                <button type="submit"><img src="./img-login/search-icon.png" alt="search" class="search"></button>
             </div>
             <div class="slogan flex">
                 <p>Teach on Byway</p>
             </div>
             <div class="sign-in-hidden flex">
-                <a href="#"><img src="./shoppingcart-icon.png" alt="shoppingcart"></a>
+                <a href="#"><img src="./img-login/shoppingcart-icon.png" alt="shoppingcart"></a>
                 <button class="get-started-button">Login</button>
                 <button class="sign-in-button">Sign Up</button>
             </div>
         </div>
-        <div class="main-content">  
+        <div class="main-content">
             <div class="left-content">
                 <form action="#">
                     <h1>Sign in to your account</h1>
                     <label for="username">Username or Email</label><br>
-                    <input type="text" id="username" name="username" placeholder="Username or Email ID" class="full"><br>
+                    <input type="text" id="username" name="username" placeholder="Username or Email ID"
+                        class="full"><br>
 
                     <label for="password">Password</label><br>
                     <input type="password" id="password" name="password" placeholder="Enter Password" class="full"><br>
@@ -50,10 +51,10 @@
 
                     <button type="submit" class="login-button">Sign In</button>
                     <p class="forgot-password"><a href="#">Forgot Password?</a></p>
-                    <div class="logo">
-                        <h1> hello </h1>
-                    </div>
                 </form>
+            </div>
+            <div class="right-content">
+                <img src="./img-login/background-login.png" alt="background-login" class="background">
             </div>
         </div>
     </div>
