--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -24,7 +24,7 @@
     <div class="auth">
       <a href="#" id="cart"><img src="homepageimg/Frame 427318762.png" alt="cart"> </a>
       <a href="#" class="login">Login</a>
-      <a href="#" class="signup">Sign Up</a>
+      <a href="../login/index.html" class="signup">Sign Up</a>
     </div>
   </header>
 
