--- a/checkout/index.html
+++ b/checkout/index.html
@@ -100,6 +100,48 @@
                 <button class="checkout-btn">Proceed to Checkout</button>
             </div>
         </div>
+    <footer class="footer">
+            <div class="footer-inner">
+                <div class="footer-column footer-left">
+                    <div class="logo-wrap">
+                        <img src="./Bywaywhite-logo.png" alt="logo">
+                    </div>
+                    <p class="footer-desc">Empowering learners through accessible and engaging online education.
+                        Byway is a leading online learning platform dedicated to providing high-quality, flexible, and
+                        affordable educational experiences.</p>
+                </div>
+
+                <div class="footer-column footer-center">
+                    <h4 class="footer-heading">Get Help</h4>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Latest Articles</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+
+                    <h4 class="footer-heading">Programs</h4>
+                    <ul>
+                        <li><a href="#">Art & Design</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">IT & Software</a></li>
+                        <li><a href="#">Languages</a></li>
+                        <li><a href="#">Programming</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column footer-right">
+                    <h4 class="footer-heading">Contact Us</h4>
+                    <p class="contact-line">Address: 123 Main Street, Anytown, CA 12345</p>
+                    <p class="contact-line">Tel: +(123) 456-7890</p>
+                    <p class="contact-line">Mail: bywayedu@webkul.in</p>
+
+                    <div class="socials">
+                        <a href="#"><img src="./logo-img.png" alt="logo"></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    
     </div>
 </body>
 
