update-js forgotPassword

--- a/ForgotPassword/index.html
+++ b/ForgotPassword/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="main-content">
-                <form action="#">
+                <form id="reset-form" action="#">
                     <h1>Reset your password</h1>
                     <p>Please enter your email address to receive a link to create a new password via email.</p>
 
@@ -44,6 +44,8 @@
                     <button type="submit" class="reset-button">Send Reset Link</button>
                 </form>
     </div>
+<div id="toast" class="toast"></div>
+<script src="index.js"></script>
 </body>
 
 </html>
