--- a/checkout/index.html
+++ b/checkout/index.html
@@ -100,7 +100,7 @@
                 <button class="checkout-btn">Proceed to Checkout</button>
             </div>
         </div>
-    <footer class="footer">
+        <footer class="footer">
             <div class="footer-inner">
                 <div class="footer-column footer-left">
                     <div class="logo-wrap">
@@ -141,8 +141,8 @@
                 </div>
             </div>
         </footer>
-    
-    </div>
+</div>
+<script src="index.js"></script>
 </body>
 
 </html>
