--- a/Signup/index.html
+++ b/Signup/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="sign-in-hidden flex">
                 <a href="#"><img src="./shoppingcart-icon.png" alt="shoppingcart"></a>
-                <button class="get-started-button">Login</button>
-                <button class="sign-in-button">Sign Up</button>
+                <a href="../login/index.html" class="get-started-button">Login</a>
+                <a href="../Signup/index.html" class="sign-in-button">Sign Up</a>
             </div>
         </div>
         <div class="main-content">
@@ -54,17 +54,19 @@
 
                         <label for="password">Password</label>
                         <input type="password" id="password" name="password" placeholder="Enter password">
-                        <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm password">
+                        <input type="password" id="confirmpassword" name="confirmpassword"
+                            placeholder="Confirm password">
 
                         <button type="submit" class="Create-button">Create Account</button>
                     </form>
                     <p class="terms">By signing up, you agree to our <a href="#">Terms of Service</a> and
-                        <a href="#">Privacy Policy</a>.</p>
+                        <a href="#">Privacy Policy</a>.
+                    </p>
                     <p class="existing-account">Already have an account? <a href="#">Log in</a></p>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="index.js"></script>
+        <script src="index.js"></script>
 </body>
 
 </html>
