--- a/login/index.html
+++ b/login/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="sign-in-hidden flex">
                 <a href="#"><img src="./img-login/shoppingcart-icon.png" alt="shoppingcart"></a>
-                <button class="get-started-button">Login</button>
-                <button class="sign-in-button">Sign Up</button>
+                <a href="../login/index.html" class="get-started-button">Login</a>
+                <a href="../Signup/index.html" class="sign-in-button">Sign Up</a>
             </div>
         </div>
         <div class="main-content">
@@ -50,7 +50,7 @@
                     </div>
 
                     <button type="submit" class="login-button">Sign In</button>
-                    <p class="forgot-password"><a href="#">Forgot Password?</a></p>
+                    <p class="forgot-password"><a href="../ForgotPassword/index.html">Forgot Password?</a></p>
                 </form>
             </div>
             <div class="right-content">
