--- a/Homepage copy/homepage.html
+++ b/Homepage copy/homepage.html
@@ -24,8 +24,8 @@
       </div>
       <div class="sign-in-hidden flex">
         <a href="#"><img src="homepageimg/shoppingcart-icon.png" alt="shoppingcart"></a>
-        <button class="get-started-button">Login</button>
-        <button class="sign-in-button">Sign Up</button>
+        <a href="../login/index.html" class="get-started-button">Login</a>
+        <a href="../Signup/index.html" class="sign-in-button">Sign Up</a>
       </div>
     </div>
   </div>
