--- a/shopping/index.html
+++ b/shopping/index.html
@@ -91,12 +91,12 @@
         <div class="courses-grid">
           
           <div class="course-card">
-            <img src="homepageimg/Rectangle 1080.png" alt="Course">
+            <a href="../mentorpage/mentor.html"><img src="homepageimg/Rectangle 1080.png" alt="Course"></a>
             <div class="course-info">
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -107,7 +107,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -117,7 +117,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -127,7 +127,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -137,7 +137,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -147,7 +147,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -157,7 +157,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -167,7 +167,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
 
@@ -177,7 +177,7 @@
               <h4>Beginner’s Guide to Design</h4>
               <p class="instructor">By Ronald Richards</p>
               <p class="details">⭐⭐⭐⭐⭐ (1200 Ratings)<br>22 Total Hours. 155 Lectures. Beginner</p>
-              <span class="price">$149.9</span>
+              <span class="price">$149.99</span>
             </div>
           </div>
         </div>
