--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="Homepage.css">
+  <link rel="stylesheet" href="Homepage copy/Homepage.css">
 </head>
 
 <body>
   <div class="homepage-container">
     <div class="menu">
       <div class="logo-img flex">
-        <img src="homepageimg/Byway-logo.png" alt="logo">
+        <img src="Homepage copy/homepageimg/Byway-logo.png" alt="logo">
         <a href="#">Categories</a>
       </div>
       <div class="search-container flex">
         <input type="text" placeholder="Search courses" class="text">
-        <button type="submit"><img src="homepageimg/search-icon.png" alt="search" class="search"></button>
+        <button type="submit"><img src="Homepage copy/homepageimg/search-icon copy.png" alt="search" class="search"></button>
       </div>
       <div class="slogan flex">
         <p>Teach on Byway</p>
