--- a/mentorpage/mentor.html
+++ b/mentorpage/mentor.html
@@ -89,6 +89,7 @@
         <button>Website</button>
         <button>Twitter</button>
         <button>Youtube</button>
+        <a href="../checkout/index.html" class="checkout"><button class="checkout">BUY COURSE</button></a>
       </div>
     </section>
   </main>
@@ -248,7 +249,7 @@
                 <div class="footer-column footer-center">
                     <h4 class="footer-heading">Get Help</h4>
                     <ul>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="../customer/customer.html">Contact Us</a></li>
                         <li><a href="#">Latest Articles</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
