--- a/Oder-complete/index.html
+++ b/Oder-complete/index.html
@@ -53,7 +53,7 @@
                 <div class="footer-column footer-center">
                     <h4 class="footer-heading">Get Help</h4>
                     <ul>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="../customer/customer.html">Contact Us</a></li>
                         <li><a href="#">Latest Articles</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
