--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -11,7 +11,7 @@
    <div class="homepage-container">
         <div class="menu">
             <div class="logo-img flex">
-                <img src="homepageimg/Byway-logo.png" alt="logo">
+                <a href="#"><img src="homepageimg/Byway-logo.png" alt="logo"></a>
                 <a href="#">Categories</a>
             </div>
             <div class="search-container flex">
