--- a/Oder-complete/index.html
+++ b/Oder-complete/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="homepage-container">
         <div class="menu">
-            <div class="logo-img flex">
+            <a href="../Homepage/index.html"><div class="logo-img flex"></a>
                 <img src="./Byway-logo.png" alt="logo">
                 <a href="#">Categories</a>
             </div>
