--- a/checkout/index.html
+++ b/checkout/index.html
@@ -12,7 +12,7 @@
     <div class="homepage-container">
         <div class="menu">
             <div class="logo-img flex">
-                <img src="./Byway-logo.png" alt="logo">
+                <a href="../Homepage/index.html"><img src="./Byway-logo.png" alt="logo"></a>
                 <a href="#">Categories</a>
             </div>
             <div class="search-container flex">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="main-content">
-            <!-- Bên trái: Billing + Payment -->
+           
             <div class="checkout-left">
                 <h2>Billing Information</h2>
                 <div class="form">
@@ -76,7 +76,6 @@
                 </div>
             </div>
 
-            <!-- Bên phải: Order Summary -->
             <div class="checkout-right">
                 <h2>Order Summary</h2>
                 <div class="course-info">
