--- a/customer/customer.html
+++ b/customer/customer.html
@@ -12,7 +12,7 @@
   <div class="homepage-container">
     <div class="menu">
       <div class="logo-img flex">
-        <img src="customerimg/Byway-logo.png" alt="logo">
+        <a href="../Homepage/index.html"><img src="customerimg/Byway-logo.png" alt="logo"></a>
         <a href="#">Categories</a>
       </div>
       <div class="search-container flex">
