--- a/shopping/index.html
+++ b/shopping/index.html
@@ -10,7 +10,7 @@
   <div class="homepage-container">
         <div class="menu">
             <div class="logo-img flex">
-                <img src="homepageimg/Byway-logo.png" alt="logo">
+                <a href="../Homepage/index.html"><img src="homepageimg/Byway-logo.png" alt="logo"></a>
                 <a href="#">Categories</a>
             </div>
             <div class="search-container flex">
