--- a/ForgotPassword/index.html
+++ b/ForgotPassword/index.html
@@ -29,23 +29,23 @@
             </div>
             <div class="sign-in-hidden flex">
                 <a href="#"><img src="./shoppingcart-icon.png" alt="shoppingcart"></a>
-                <button class="get-started-button">Login</button>
-                <button class="sign-in-button">Sign Up</button>
+                <a href="../login/index.html" class="get-started-button">Login</a>
+                <a href="../Signup/index.html" class="sign-in-button">Sign Up</a>
             </div>
         </div>
         <div class="main-content">
-                <form id="reset-form" action="#">
-                    <h1>Reset your password</h1>
-                    <p>Please enter your email address to receive a link to create a new password via email.</p>
+            <form id="reset-form" action="#">
+                <h1>Reset your password</h1>
+                <p>Please enter your email address to receive a link to create a new password via email.</p>
 
-                    <label for="email">Email Address</label><br>
-                    <input type="email" id="email" name="email" placeholder="Email ID" class="full"><br>
+                <label for="email">Email Address</label><br>
+                <input type="email" id="email" name="email" placeholder="Email ID" class="full"><br>
 
-                    <button type="submit" class="reset-button">Send Reset Link</button>
-                </form>
-    </div>
-<div id="toast" class="toast"></div>
-<script src="index.js"></script>
+                <button type="submit" class="reset-button">Send Reset Link</button>
+            </form>
+        </div>
+        <div id="toast" class="toast"></div>
+        <script src="index.js"></script>
 </body>
 
 </html>
