--- a/checkout/index.html
+++ b/checkout/index.html
@@ -89,11 +89,11 @@
                 </div>
 
                 <div class="price-details">
-                    <p>Price: <span>$300.00</span></p>
+                    <p>Price: <span>$149.99</span></p>
                     <p>Discount: <span>-$10.00</span></p>
                     <p>Tax: <span>$0.00</span></p>
                     <hr>
-                    <p class="total">Total: <span>$290.00</span></p>
+                    <p class="total">Total: <span>$139.99</span></p>
                 </div>
 
                 <button class="checkout-btn">Proceed to Checkout</button>
@@ -113,7 +113,7 @@
                 <div class="footer-column footer-center">
                     <h4 class="footer-heading">Get Help</h4>
                     <ul>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="../customer/customer.html">Contact Us</a></li>
                         <li><a href="#">Latest Articles</a></li>
                         <li><a href="#">FAQ</a></li>
                     </ul>
