--- a/Oder-complete/index.html
+++ b/Oder-complete/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="homepage-container">
         <div class="menu">
-            <a href="../Homepage/index.html"><div class="logo-img flex"></a>
-                <img src="./Byway-logo.png" alt="logo">
+            <div class="logo-img flex">
+                <a href="../Homepage/index.html"><img src="./Byway-logo.png" alt="logo"></a>
                 <a href="#">Categories</a>
             </div>
             <div class="search-container flex">
